fixed calling Idle while debugging for cmd line debugger
 SVN 8135@trunk

--- a/debugger/watchesdlg.lfm
+++ b/debugger/watchesdlg.lfm
@@ -1,7 +1,12 @@
 object WatchesDlg: TWatchesDlg
+  ActiveControl = lvWatches
   Caption = 'Watch list'
   ClientHeight = 200
   ClientWidth = 500
+  OnClose = FormClose
+  OnCloseQuery = FormCloseQuery
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   PixelsPerInch = 112
   HorzScrollBar.Page = 499
   VertScrollBar.Page = 199
