--- a/debugger/evaluatedlg.lfm
+++ b/debugger/evaluatedlg.lfm
@@ -1,15 +1,44 @@
 object EvaluateDlg: TEvaluateDlg
+  ActiveControl = ToolBar1
   BorderStyle = bsSizeToolWin
   Caption = 'Evaluate/Modify'
   ClientHeight = 296
   ClientWidth = 400
-  PixelsPerInch = 90
-  HorzScrollBar.Page = 401
-  VertScrollBar.Page = 297
+  PixelsPerInch = 112
+  HorzScrollBar.Page = 399
+  VertScrollBar.Page = 295
   Left = 351
   Height = 296
   Top = 136
   Width = 400
+  object Label1: TLabel
+    Caption = '&Expression:'
+    Color = clNone
+    ParentColor = False
+    Left = 8
+    Height = 13
+    Top = 56
+    Width = 74
+  end
+  object Label2: TLabel
+    Caption = '&Result:'
+    Color = clNone
+    ParentColor = False
+    Left = 8
+    Height = 13
+    Top = 104
+    Width = 47
+  end
+  object lblNewValue: TLabel
+    Anchors = [akLeft, akBottom]
+    Caption = '&New value:'
+    Color = clNone
+    ParentColor = False
+    Left = 8
+    Height = 13
+    Top = 248
+    Width = 73
+  end
   object ToolBar1: TToolBar
     AutoSize = True
     ButtonHeight = 50
@@ -17,18 +46,18 @@ object EvaluateDlg: TEvaluateDlg
     Caption = 'ToolBar1'
     EdgeBorders = [ebTop, ebBottom]
     Flat = True
-    Height = 52
-    ParentColor = True
+    Height = 54
     ShowCaptions = True
     TabOrder = 0
     TabStop = True
-    Height = 52
+    Height = 54
     Width = 400
     object tbInspect: TToolButton
       Caption = '&Inspect'
       Enabled = False
       Left = 226
       Height = 50
+      Top = 2
       Width = 75
     end
     object tbWatch: TToolButton
@@ -37,6 +66,7 @@ object EvaluateDlg: TEvaluateDlg
       OnClick = tbWatchClick
       Left = 151
       Height = 50
+      Top = 2
       Width = 75
     end
     object tbModify: TToolButton
@@ -44,60 +74,42 @@ object EvaluateDlg: TEvaluateDlg
       Enabled = False
       Left = 76
       Height = 50
+      Top = 2
       Width = 75
     end
     object tbEvaluate: TToolButton
       Caption = 'E&valuate'
       Enabled = False
       OnClick = tbEvaluateClick
+      Left = 1
       Height = 50
+      Top = 2
       Width = 75
     end
-  end
-  object Label1: TLabel
-    Caption = '&Expression:'
-    Left = 8
-    Height = 17
-    Top = 56
-    Width = 65
   end
   object cmbExpression: TComboBox
     Anchors = [akTop, akLeft, akRight]
     MaxLength = 0
     OnChange = cmbExpressionChange
+    OnKeyDown = cmbExpressionKeyDown
     TabOrder = 2
     Left = 8
     Height = 25
     Top = 72
     Width = 384
   end
-  object Label2: TLabel
-    Caption = '&Result:'
-    Left = 8
-    Height = 17
-    Top = 104
-    Width = 65
-  end
   object txtResult: TMemo
     Anchors = [akTop, akLeft, akRight, akBottom]
-    TabOrder = 4
+    TabOrder = 1
     Left = 8
     Height = 124
     Top = 120
     Width = 384
   end
-  object lblNewValue: TLabel
-    Anchors = [akLeft, akBottom]
-    Caption = '&New value:'
-    Left = 8
-    Height = 13
-    Top = 248
-    Width = 65
-  end
   object cmbNewValue: TComboBox
     Anchors = [akLeft, akRight, akBottom]
     MaxLength = 0
-    TabOrder = 6
+    TabOrder = 3
     Left = 8
     Height = 25
     Top = 264
